# push-up-counter

./: .gitignore  ACV.ipynb  README.md  acvyousra.ipynb  data_df  dataset_up.pkl  main.py  model.pkl  pyproject.toml  takephoto.py
model_generations/: bas_pose.pickle  extract_pose_landmarks.ipynb  haut_pose.pickle  model.pickle  model_creation.ipynb
