[project]
name = "20-acv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.14",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "plotly>=6.5.0",
]
